--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -3,17 +3,18 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+
   <groupId>com.xzc</groupId>
-  <artifactId>config</artifactId>
+  <artifactId>config-server</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
-  
+
   <name>config-server</name>
 
   <parent>
     <groupId>com.xzc</groupId>
     <artifactId>config</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <dependencies>
@@ -26,6 +27,7 @@
       <artifactId>spring-cloud-config-server</artifactId>
     </dependency>
   </dependencies>
+  
   <build>
     <plugins>
       <plugin>
