--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=https://github.com/SimonShaw25/config.git
-spring.cloud.config.server.git.searchPaths=respo
+spring.cloud.config.server.git.uri=https://github.com/SimonShaw25/springCloudConfig/
+spring.cloud.config.server.git.searchPaths=config-server/config
 spring.cloud.config.label=master
-
