--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <modules>
     <module>config-server</module>
-    <module>config-client</module>
+    <!--<module>config-client</module>-->
   </modules>
 
   <name>config</name>
