提交配置文件

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=config-server
-server.port=8888
+server.port=8889
 
 spring.cloud.config.server.git.uri=https://github.com/SimonShaw25/springCloudConfig/
 spring.cloud.config.server.git.searchPaths=config
 spring.cloud.config.label=master
+spring.cloud.config.server.git.username=SimonShaw25
+spring.cloud.config.server.git.password=xzclove123
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
