--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -1,10 +1,11 @@
-spring:
-  application:
-    name: configClient                     #指定了配置文件的应用名
-  cloud:
-    config:
-      uri: http://localhost:8888/        #Config server的uri
-      profile: dev                       #指定的环境
-      label: master
 server:
   port: 8881
+
+spring:
+  application:
+    name: configClient
+  cloud:
+    config:
+      uri: http://localhost:9999/
+      profile: dev
+      label: master
